--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,24 +1,106 @@
 {
-  "name": "편집자P 블로그",
+  "name": "편집자P 블로그 - 개발자를 위한 실무 노하우와 도서 리뷰",
   "short_name": "편집자P",
-  "description": "Next.js로 개발하고 vercel로 배포한 블로그입니다.",
+  "description": "IT 도서 리뷰, 개발 팁, 생산성 도구에 대한 실무 중심의 블로그입니다. Python, JavaScript, 자동화 도구 등 개발자에게 유용한 정보를 제공합니다.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
-  "orientation": "portrait",
+  "orientation": "portrait-primary",
+  "lang": "ko",
+  "dir": "ltr",
+  "categories": ["productivity", "technology", "education", "books"],
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "/android-chrome-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable any"
+      "purpose": "any"
+    },
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon-32x32.png",
+      "sizes": "32x32",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/favicon-16x16.png",
+      "sizes": "16x16",
+      "type": "image/png",
+      "purpose": "any"
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "/og-image.png",
+      "sizes": "1200x630",
+      "type": "image/png",
+      "label": "편집자P 블로그 홈페이지"
+    }
+  ],
+  "shortcuts": [
+    {
+      "name": "최신 포스트",
+      "short_name": "최신글",
+      "description": "최신 블로그 포스트 보기",
+      "url": "/posts",
+      "icons": [
+        {
+          "src": "/favicon-32x32.png",
+          "sizes": "32x32"
+        }
+      ]
+    },
+    {
+      "name": "도서 리뷰",
+      "short_name": "도서",
+      "description": "IT 도서 리뷰 모음",
+      "url": "/books",
+      "icons": [
+        {
+          "src": "/favicon-32x32.png",
+          "sizes": "32x32"
+        }
+      ]
+    },
+    {
+      "name": "개발 카테고리",
+      "short_name": "개발",
+      "description": "개발 관련 포스트",
+      "url": "/category/dev",
+      "icons": [
+        {
+          "src": "/favicon-32x32.png",
+          "sizes": "32x32"
+        }
+      ]
+    }
+  ],
+  "related_applications": [],
+  "prefer_related_applications": false
 } 
